Added character panel

--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -133,23 +133,24 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
-		</ul><hr>
-		<h3>Example</h3>
-		<ul>
-			<li>Example text</li>
+			<li>Three improvisers take a seat or stand on stage.</li>
+			<li>A host welcomes the crowd to this special event where we have a panel of experts and gets a suggestion for the topic on which they are experts.</li>
+			<li>Optionally the host can give the improvisers a chance to introduce themselves as their characters</li>
+			<li>The host fields questions from the audience and lets the characters go down the line and answer them.</li>
+			<li>The host can make some observations or inferences about the characters in between their answers and questions but shouldn't take up too much time talking themself.</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scenework.</li>
+			<li>Improviers will have to listen to their scene partners and make decisions that are distinct from them.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Answers to questions should last too long, this isn't a monologue.</li>
+			<li>Improvisers need to make sure their characters are very distinct from each other and have unique perspectives on the topic.</li>
+			<li>Commit fully to their characters or this game will get boring real quick.</li>
+			<li>The host should moderate the amount of questions based on how long they take to get through each character, usually 2-4 questions is best.</li>
+			<li>Let a different character answer first in each round of questions.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
