added "talk about something else"

--- a/pages/scene.html
+++ b/pages/scene.html
@@ -329,23 +329,20 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
-		</ul><hr>
-		<h3>Example</h3>
-		<ul>
-			<li>Example text</li>
+			<li>One improviser initiates a scene with some sort of phyical activity.</li>
+			<li>The activity should be something that can be continued throughout the scene like washing dishes, folding laundry, decorating for a party, etc...</li>
+			<li>A second improviser should join the scene and the activity.</li>
+			<li>They must then perform the scene without speaking about the activity at hand.</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
-		</ul><hr>
-		<h3>Tips</h3>
-		<ul>
-			<li>Tips text</li>
+			<li>Usually you don't talk about doing dishes while you're doing dishes, or most other mundane activities.</li>
+			<li>It's more realistic this way.</li>
+			<li>This exercise will also help you build your environment and keep the scene dynamic without getting stuck talking about something uninteresting.</li>
 		</ul><hr>
 		<h3>Sources</h3>
 		<ul>
-			<li>Sources text</li>
+			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 36</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scene Work</a> - 
