--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -253,7 +253,7 @@
 			<li>A suggestion can be gotten at the top or the set can begin completely organically.</li>
 			<li>If a suggestion is gotten at the top, that will inspire the initiation for the first scene.</li>
 			<li>Each scene will be initiated based off something organically pulled from the improvisers mind, or from an element from the scene the preceeded it.</li>
-			<li>Imrpovisers can use any support moves or edits available to them to play the scenes before moving on to the next.</li>
+			<li>Improvisers can use any support moves or edits available to them to play the scenes before moving on to the next.</li>
 			<li>The scenes do not have to have any through line or connections.</li>
 		</ul><hr>
 		<h3>Purpose</h3>
