--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -166,23 +166,32 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
-		</ul><hr>
-		<h3>Example</h3>
-		<ul>
-			<li>Example text</li>
+			<li>One improviser is selected to be the taxi driver and guesser. They leave the room while the host or participating improvisers get suggestions.</li>
+			<li>3-6 other improvisers will be the cab riders. They will get suggestions for distinct characters to play.</li>
+			<li>They can be cartoon characters, celebrities, innanimate objects, animals or anything else that can be played for comedic effect.</li>
+			<li>Once all the suggestions are gotten, we can call back in the driver to start the scene.</li>
+			<li>They'll mime starting off their day and soon pick up the first rider.</li>
+			<li>The rider will give hints to the driver based on their behavior and answers to the cab driver's questions.</li>
+			<li>Once the driver has an idea who they think the person might be they can begin guessing.</li>
+			<li>Once they guess correctly they can drop off the rider and pick up the next.</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>This is a fun game to play with improvisers of all skill levels.</li>
+			<li>The driver must listen and pay close attention to the character to try and guess who they are.</li>
+			<li>New improvisers are forced to step outside themself and play a character.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>The rider's hints should start out relatively vague and get more obvious over time so as not to give it away too quickly, or spend too much time on one character.</li>
+			<li>If it seems like the driver really can't get it feel free after some time to just give it up with a rhyme - "You really don't know me? It rhymes with picky pouse!"</li>
+			<li>If you're playing with only 2-3 passengers, or a particularly good guesser, feel free to give them a secondary characteristic after their character like...</li>
+			<ul>
+				<li>Spongebob Sqaurepants selling tupperware</li>
+				<li>A blender whose dog ran away</li>
+				<li>A thunderstorm with a crush on John Cena</li>
+				<li>A praying mantis who is obsessed with reality tv</li>
+			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
