--- a/pages/gibberish.html
+++ b/pages/gibberish.html
@@ -33,7 +33,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li><li>This is a game for 4+ improvisers where each walk-on will have to try and guess the suggestions and then convey them to the next person using only miming and gibberish.</li>
+			<li>This is a game for 4+ improvisers where each walk-on will have to try and guess the suggestions and then convey them to the next person using only miming and gibberish.</li>
 			<li>All but one improviser leaves the room and the remaining improviser and/or host get three suggestions.</li>
 			<li>The suggestions are for an occupation, weapon, and location.</li>
 			<li>The scene starts when the starting improviser mimes killing an improviser from the backline with the murder weapon. The murdered improviser should lay on the floor and become a dead body.</li>
@@ -49,7 +49,7 @@
 		<h3>Tips</h3>
 		<ul>
 			<li>Use the acronym O.W.L. to remember the order of the suggestions being acted out.</li>
-			<li>Really play up the gibberish and be expressive. The scene gets awkward if the improviser are too quiet or not animated enough.</li>
+			<li>Really play up the gibberish and be expressive. The scene gets awkward if the improvisers are too quiet or not animated enough.</li>
 			<li>The guessers shouldn't make the miming improviser spend too much time on each suggestion, as soon as you think you have an idea of what they might be doing give them the go-ahead to switch to the next suggestion. We don't want the scene to go on too long and it's funnier if the suggestions get lost along the way than if they stay the same the whole time.</li>
 		</ul><hr>
 		<h3>Sources</h3>
