--- a/pages/performance.html
+++ b/pages/performance.html
@@ -169,7 +169,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li><li>This is a game for 4+ improvisers where each walk-on will have to try and guess the suggestions and then convey them to the next person using only miming and gibberish.</li>
+			<li>This is a game for 4+ improvisers where each walk-on will have to try and guess the suggestions and then convey them to the next person using only miming and gibberish.</li>
 			<li>All but one improviser leaves the room and the remaining improviser and/or host get three suggestions.</li>
 			<li>The suggestions are for an occupation, weapon, and location.</li>
 			<li>The scene starts when the starting improviser mimes killing an improviser from the backline with the murder weapon. The murdered improviser should lay on the floor and become a dead body.</li>
@@ -185,7 +185,7 @@
 		<h3>Tips</h3>
 		<ul>
 			<li>Use the acronym O.W.L. to remember the order of the suggestions being acted out.</li>
-			<li>Really play up the gibberish and be expressive. The scene gets awkward if the improviser are too quiet or not animated enough.</li>
+			<li>Really play up the gibberish and be expressive. The scene gets awkward if the improvisers are too quiet or not animated enough.</li>
 			<li>The guessers shouldn't make the miming improviser spend too much time on each suggestion, as soon as you think you have an idea of what they might be doing give them the go-ahead to switch to the next suggestion. We don't want the scene to go on too long and it's funnier if the suggestions get lost along the way than if they stay the same the whole time.</li>
 		</ul><hr>
 		<h3>Sources</h3>
@@ -406,23 +406,32 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
-		</ul><hr>
-		<h3>Example</h3>
-		<ul>
-			<li>Example text</li>
+			<li>One improviser is selected to be the taxi driver and guesser. They leave the room while the host or participating improvisers get suggestions.</li>
+			<li>3-6 other improvisers will be the cab riders. They will get suggestions for distinct characters to play.</li>
+			<li>They can be cartoon characters, celebrities, innanimate objects, animals or anything else that can be played for comedic effect.</li>
+			<li>Once all the suggestions are gotten, we can call back in the driver to start the scene.</li>
+			<li>They'll mime starting off their day and soon pick up the first rider.</li>
+			<li>The rider will give hints to the driver based on their behavior and answers to the cab driver's questions.</li>
+			<li>Once the driver has an idea who they think the person might be they can begin guessing.</li>
+			<li>Once they guess correctly they can drop off the rider and pick up the next.</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>This is a fun game to play with improvisers of all skill levels.</li>
+			<li>The driver must listen and pay close attention to the character to try and guess who they are.</li>
+			<li>New improvisers are forced to step outside themself and play a character.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>The rider's hints should start out relatively vague and get more obvious over time so as not to give it away too quickly, or spend too much time on one character.</li>
+			<li>If it seems like the driver really can't get it feel free after some time to just give it up with a rhyme - "You really don't know me? It rhymes with picky pouse!"</li>
+			<li>If you're playing with only 2-3 passengers, or a particularly good guesser, feel free to give them a secondary characteristic after their character like...</li>
+			<ul>
+				<li>Spongebob Sqaurepants selling tupperware</li>
+				<li>A blender whose dog ran away</li>
+				<li>A thunderstorm with a crush on John Cena</li>
+				<li>A praying mantis who is obsessed with reality tv</li>
+			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
