Added alphabet game and changes to all games & exercises

--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -9,8 +9,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
-<header>
-  <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
+<header id="top">
+	<div class="d-flex flex-wrap justify-content-around">
+		<a class="mx-5 py-2" href="../index.html">Home</a><a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
+	</div>
 </header>
 <body>
   <h1 class="text-center" id="top">All Games & Exercises</h1>
@@ -25,33 +27,33 @@
     <h3 id="a">A</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#adGame">Ad Game</a></h5></li>
-<li><h5><a href="exercises.html#alienTigerCow">Alien Tiger Cow</a></h5></li>
+<li><h5><a href="group.html#adGame">Ad Game</a></h5></li>
+<li><h5><a href="child_friendly.html#alienTigerCow">Alien Tiger Cow</a></h5></li>
 <li><h5><a href="exercises.html#alphabetGame">Alphabet Game</a></h5></li>
       </ul>
     </div>
     <h3 id="b">B</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#badRap">Bad Rap</a></h5></li>
-<li><h5><a href="exercises.html#bigBooty">Big Booty</a></h5></li>
-<li><h5><a href="exercises.html#bunnyBunny">Bunny Bunny</a></h5></li>
+<li><h5><a href="warm_ups.html#badRap">Bad Rap</a></h5></li>
+<li><h5><a href="warm_ups.html#bigBooty">Big Booty</a></h5></li>
+<li><h5><a href="warm_ups.html#bunnyBunny">Bunny Bunny</a></h5></li>
       </ul>
     </div>
     <h3 id="c">C</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#chameleon">Chameleon</a></h5></li>
-<li><h5><a href="exercises.html#chainMurder">Chain Murder</a></h5></li>
-<li><h5><a href="exercises.html#change">Change</a></h5></li>
-<li><h5><a href="exercises.html#characterPanel">Character Panel</a></h5></li>
-<li><h5><a href="exercises.html#characterMatching">Character Matching</a></h5></li>
+<li><h5><a href="character.html#chameleon">Chameleon</a></h5></li>
+<li><h5><a href="guessing.html#chainMurder">Chain Murder</a></h5></li>
+<li><h5><a href="performance.html#change">Change</a></h5></li>
+<li><h5><a href="character.html#characterPanel">Character Panel</a></h5></li>
+<li><h5><a href="character.html#characterMatching">Character Matching</a></h5></li>
       </ul>
     </div>
     <h3 id="d">D</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#dayInTheLife">Day in the Life</a></h5></li>
+<li><h5><a href="interview.html#dayInTheLife">Day in the Life</a></h5></li>
       </ul>
     </div>
     <h3 id="e">E</h3>
@@ -81,7 +83,7 @@
     <h3 id="m">M</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#mindMeld">Mind Meld</a></h5></li>
+<li><h5><a href="warm_ups.html#mindMeld">Mind Meld</a></h5></li>
       </ul>
     </div>
     <h3 id="n">N</h3>
@@ -90,13 +92,13 @@
     <h3 id="o">O</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#organicLongForm">Organic Long Form</a></h5></li>
+<li><h5><a href="long_forms.html#organicLongForm">Organic Long Form</a></h5></li>
       </ul>
     </div>
     <h3 id="p">P</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#pillars">Pillars</a></h5></li>
+<li><h5><a href="audience_participation.html#pillars">Pillars</a></h5></li>
       </ul>
     </div>
     <h3 id="q">Q</h3>
@@ -108,16 +110,16 @@
     <h3 id="s">S</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#sentenceGame">Sentence Game</a></h5></li>
+<li><h5><a href="sentences.html#sentenceGame">Sentence Game</a></h5></li>
       </ul>
     </div>
     <h3 id="t">T</h3>
     <div>
       <ul>
-<li><h5><a href="exercises.html#taglineSong">Tagline Song</a></h5></li>
-<li><h5><a href="exercises.html#talkAboutSomethingElse">Talk About Something Else</a></h5></li>
-<li><h5><a href="exercises.html#taxi">Taxi</a></h5></li>
-<li><h5><a href="exercises.html#typewriter">Typewriter</a></h5></li>
+<li><h5><a href="song_formats.html#taglineSong">Tagline Song</a></h5></li>
+<li><h5><a href="object_work.html#talkAboutSomethingElse">Talk About Something Else</a></h5></li>
+<li><h5><a href="guessing.html#taxi">Taxi</a></h5></li>
+<li><h5><a href="narrative.html#typewriter">Typewriter</a></h5></li>
       </ul>
     </div>
     <h3 id="u">U</h3>
@@ -142,10 +144,7 @@
     <h5><a href="#top">Back to Top</a></h5>
   </div>
   <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-      <h5 class="mx-5 py-2"><a href="categories.html">Games, Exercises, and Formats</a></h5>
-    </div>
-  </footer>
-</body>
+	<div class="d-flex flex-wrap justify-content-around"><a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a></div>
+</footer></body>
 </html>
