--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -170,23 +170,30 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Two improvisers take the stage and a basic suggestion is given.</li>
+			<li>They perform a scene where each sentence must begin with a word that starts with the next consecutive letter of the alphabet.</li>
+			<li>They can go from A to Z and end the scene there or restart at A and continue until a more traditional edit is made.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
+			<li>Suggestion: Car alarm</li>
+			<li>Improviser 1: Alright can you turn that off?</li>
+			<li>Improviser 2: Boy it sure is loud! What did you say?</li>
+			<li>Improviser 1: Can you turn off the alarm please?</li>
+			<li>Improviser 2: Didn't hear you. The alarm is too loud.</li>
+			<li>Improviser 1: Enough! Please turn it off.</li>
+			<li>Improviser 2: Friend! I can't understand you!</li>
+			<li>etc...</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>This excercise privides a fun challenge for improvisers and forces them to listen and think quickly.</li>
 		</ul><hr>
-		<h3>Tips</h3>
+		<h3>Variations</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>You could play with more than two players.</li>
+			<li>You could have the audience choose the starting letter.</li>
+			<li>You could play it as an elimination game where people get out if they mess up or take too long to respond.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
