--- a/pages/musical.html
+++ b/pages/musical.html
@@ -36,23 +36,44 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Players stand in a circle and snap, clap, or pat a rhythm.</li>
+			<li>Everyone chants together in rhythm: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap.</li>
+			<li>The first player raps a line, establishing the rhyming word.</li>
+			<li>Everyone chants together between each line.</li>
+			<li>The next player raps a line setting up an obvious rhyme for the last word of the previous line but then chooses a non rhyming word to end the line.</li>
+			<li>The next player in the circle uses the last word of the previous line to set up an obvious rhyme but then again doesn't go for it.</li>
+			<li>Continue the pattern as long as your group likes!</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
+			<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+			<li>Player 1: I sure would like to eat a snack!</li>
+			<li>Player 2: (thinking of the rhyme pack) I always stick together with my wolf <strong>crew!</strong></li>
+			<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+			<li>Player 3: (thinking of the rhyme dew) I love the grass in the morning covered in <strong>wet!</strong></li>
+			<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+			<li>Player 4: (thinking of the rhyme debt) I have bag credit because I'm in <strong>finance bad!</strong></li>
+			<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+			<li>etc...</li>
 		</ul><hr>
-		<h3>Purpose</h3>
+		<h3>Variations</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>Have the next person finish your line with the non-rhyming word.</li>
+			<li>Example:</li>
+			<ul>
+				<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+				<li>Player 1: I sure would like to eat a snack!</li></li>
+				<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+				<li>Player 2: (thinking of the rhyme pack) I always stick together with my wolf...</li>
+				<li>Player 3: <strong>crew!</strong></li>
+				<li>Group: bad rap _ bad rap _ bad rap bad rap _ bad rap _ bad rap</li>
+			</ul>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Try to set up the next person with an easy word to rhyme. Single syllable words are usually safe.</li>
+			<li>As soon as you hear the person before you's end word, think of a rhyme, then build up to it and pick a different word at the last second.</li>
+			<li>Synonyms are usually the way to ge, but a curveball can be fun too.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
