added big booty

--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -262,23 +262,33 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Players form a circle and designate someone to start as Big Booty.</li>
+			<li>The rest of the players starting to the left of big booty will be assigned a number, starting at one and counting up.</li>
+			<li>To start the game the players will all start patting, snapping, or clapping a moderate rhythm.</li>
+			<li>All together everyone chats "Awwww snap! Big Booty Big Booty Big Booty!"</li>
+			<li>Big Booty will start by saying "Big Booty number #" in rhythm, filling in the # with one of the players numbers.</li>
+			<li>That number player will respond with their own number and then another number with the format "number #(their number) number #(a new number)".</li>
+			<li>They can also send it back to big booty like this: "number #(their number) Big Booty".</li>
+			<li>If a player messes up by saying their own number, not realizing they've been called, or taking too long everyone chants says together: "awww snap!" then they go to the end of the line and everyone who was after them moves down a number.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
+			<li>Everyone: Aww snap! Big Booty Big Booty Big Booty!</li>
+			<li>Big Booty: Big Booty Number 3</li>
+			<li>Player 3: Number 3 number 8</li>
+			<li>Player 8: Number 8 number 5</li>
+			<li>Player 5: Number 5 Big Booty</li>
+			<li>Big Booty: Big Booty number 2</li>
+			<li>Player 2: Number 2 Number 7</li>
+			<li>Player 7 is blindsided: Uhh uhhh uhh</li>
+			<li>Everyone: Awww snapp</li>
+			<li>Player 7 goes to the end(the right of big booty) and everyone from number 8 and higher moves down a number.</li>
+			<li>Rinse and repeat!</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
-		</ul><hr>
-		<h3>Tips</h3>
-		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>This game makes a great warm-up, or ice-breaker.</li>
+			<li>Players of this game need to be in the moment and listening, ready to react and respond when called up.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
