added mind meld, added text/heading color variation

--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -248,23 +248,45 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Players form a circle.</li>
+			<li>Players think of a random word and raise their hand.</li>
+			<li>The first two players to do so will count down from three and say their word at the same time.</li>
+			<li>Everyone now tries to think of a word the connects the two previous words.</li>
+			<li>You can't repeat a word that's already been used in a round.</li>
+			<li>The first two to think of a connecting word raise their hand then count down from three and say their words at the same time.</li>
+			<li>The goal is for the two players to say the same word at the same time and the round ends when that happens.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
+			<li>Two players: 3... 2... 1... </li>
+			<li>Any player: Car! (at the same time) Any other player: Peanut!</li>
+			<li><em>A leading player, teacher, or anyone can repeat the two words for anyone who didn't catch them.</em></li>
+			<li>Leader: Car and Peanut!</li>
+			<li>Two players: 3... 2... 1... </li>
+			<li>Any player: Shell! (at the same time) Any other player: Inside!</li>
+			<li>Leader: Shell and Inside!</li>
+			<li>Two players: 3... 2... 1... </li>
+			<li>Any player: Clam! (at the same time) Any other player: Crab!</li>
+			<li>Leader: Clam and Crab!</li>
+			<li>Two players: 3... 2... 1... </li>
+			<li>Any player: Seafood! (at the same time) Any other player: Seafood!</li>
+			<li>Celebrate accordingly as decided by your group!</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>Purpose</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
+			<li>Play with energy.</li>
+			<li>Try and keep the speed up between guesses.</li>
+			<li>Don't be precious trying to think of the perfect connection, just go for it.</li>
 		</ul><hr>
-		<h3>Sources</h3>
+		<h3>Variations</h3>
 		<ul>
-			<li>Sources text</li>
+			<li>You can play it around the circle rather than by raising your hand to volunteer.</li>
+			<li>You can play speed mode where you don't take any time between guessers and imediate start counting down from three after each set of guesses.</li>
+			<li>You playing in pairs or a larger group.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
