--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -184,7 +184,7 @@
 		<h3>Tips</h3>
 		<ul>
 			<li>The rider's hints should start out relatively vague and get more obvious over time so as not to give it away too quickly, or spend too much time on one character.</li>
-			<li>If it seems like the driver really can't get it feel free after some time to just give it up with a rhyme - "You really don't know me? It rhymes with picky pouse!"</li>
+			<li>If it seems like the driver really can't get it, feel free, after some time, to just give it up with a rhyme - "You really don't know me? It rhymes with picky pouse!"</li>
 			<li>If you're playing with only 2-3 passengers, or a particularly good guesser, feel free to give them a secondary characteristic after their character like...</li>
 			<ul>
 				<li>Spongebob Sqaurepants selling tupperware</li>
