--- a/pages/performance.html
+++ b/pages/performance.html
@@ -431,7 +431,7 @@
 		<h3>Tips</h3>
 		<ul>
 			<li>The rider's hints should start out relatively vague and get more obvious over time so as not to give it away too quickly, or spend too much time on one character.</li>
-			<li>If it seems like the driver really can't get it feel free after some time to just give it up with a rhyme - "You really don't know me? It rhymes with picky pouse!"</li>
+			<li>If it seems like the driver really can't get it, feel free, after some time, to just give it up with a rhyme - "You really don't know me? It rhymes with picky pouse!"</li>
 			<li>If you're playing with only 2-3 passengers, or a particularly good guesser, feel free to give them a secondary characteristic after their character like...</li>
 			<ul>
 				<li>Spongebob Sqaurepants selling tupperware</li>
@@ -454,23 +454,31 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>One player is the narrator of the story and sits or stands on stage miming like they are writing a story on a typewriter.</li>
+			<li>The narrator speaks aloud what he is "writing".</li>
+			<li>Improvisers will enter the scene to play the characters the narrator mentions and begin playing the scene normally.</li>
+			<li>The narrator can give and take focus at any time.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
-		</ul><hr>
-		<h3>Purpose</h3>
-		<ul>
-			<li>Purpose text</li>
+			<li>Narrator: The mystery of the missing moose. Chapter one, the forest sleeps. A cool chill hung in the early morning air as Park Ranger Mitchel and his young apprentice Carl began their morning forest inspection hike.</li>
+			<li>Two improvisers step out miming preparing for their walk.</li>
+			<li>Carl: It's freezing out here Mr. Mitchel. Maybe we go back and sit around the fire until it warms up a bit.</li>
+			<li>Ranger Mitchel: I'm sure everything's fine Carl. But it's our responsibility to make sure all the forest creatures are safe from anyone who would do them harm.</li>
+			<li>Narrator: But everything wasn't fine in the forest that day, and it wouldn't be long before the ranger noticed something out of the ordinary.</li>
+			<li>Ranger Mitchel: Oh my god. Freeze boy.</li>
+			<li>Carl: Why? What is it Mr. Mitchel?</li>
+			<li>Ranger Mitchel: You see that? It's a moose egg. Not usualy for them to be left alone like that. Momma's gotta be nearby.</li>
+			<li>Narrator: A large, brown, and furry egg lay nestled in a bed of pine needles surrounded by trees in every direction. A trail of crimson stained staining the forest floor lay before them leading into the thickest brush of the woods.</li>
+			<li>Carl: Wait... Mr. Mitchel. Is that blood?</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Be sure improvisers are using give and take to share the spotlight. The bulk of the responsibility shouldn't fall on the narrator or the actors.</li>
+			<li>The narrator can take advantage of the format by establishing tone and using scene painting.</li>
+			<li>Yes and the narrators decisions including the physical reality of the space.</li>
+			<li>The narrator can always jump forward in time, to a new location or rip up a page and start over. They don't have to write the story in sequential order.</li>
+			<li>Focus on telling a good story rather than doing bits. Bits can have their place though.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
