--- a/pages/party.html
+++ b/pages/party.html
@@ -222,7 +222,8 @@
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose</li>
+			<li>Played with speed this can be a good get out of your head game.</li>
+			<li>This game helps establish a group mind, helping improvisers see how each other thinks and makes connections.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
