--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -73,6 +73,9 @@
     </div>
     <h3 id="j">J</h3>
     <div>
+      <ul>
+<li><h5><a href="justification.html#justificationRealtor">Justification Realtor</a></h5></li>
+      </ul>
     </div>
     <h3 id="k">K</h3>
     <div>
