--- a/pages/justification.html
+++ b/pages/justification.html
@@ -19,6 +19,9 @@
 	<div class="m-5 games-list">
 		<ul class="py-3">
 			<li>
+				<a href="#justificationRealtor">Justification Realtor</a>
+			</li>
+			<li>
 				<a href="#sentenceGame">Sentence Game</a>
 			</li>
 		</ul>
@@ -27,6 +30,41 @@
 <hr class="thick-hr">
 
 <div class="m-5">
+	<!-- ---------- JUSTIFICATION REALTOR ---------- -->
+	<div class="game-box p-2" id="justificationRealtor">
+		<h2>Justification Realtor</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>One player starts a scene as a realtor preparing an open house.</li>
+			<li>Shortly after a few guests(usually 2-3) knock on the door and are welcomed to view the house.</li>
+			<li>The realtor shows the guests around and one by one the guests ask questions about the absurdities of the house.</li>
+			<li>These questions involve a bit of scene painting of absurd things we don't already know about the house.</li>
+			<li>It is the realtors job to logically justify these absurd features of the house.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Guest: Excuse me, could you tell me a bit about this rusty blood stained trap door here in the floor?</li>
+			<li>Realtor: Ah certainly! One of this home's primary security features. There is a ferocious blood thirsty beast underneath that door. If ever you're in danger from a home intruder, you need only pull that lever.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This exercise allows improvisers to practice:</li>
+			<ul>
+				<li>playing a grounded character</li>
+				<li>scene painting</li>
+				<li>coming up with inconsequential absurd ideas</li>
+				<li>justifying</li>
+			</ul>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="scene.html">Scenework</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
 	<!-- ---------- SENTENCE GAME ---------- -->
 	<div class="game-box p-2" id="sentenceGame">
 		<h2>Sentence Game</h2>
