Added gossip and buttons for the games links

--- a/pages/listening.html
+++ b/pages/listening.html
@@ -509,7 +509,7 @@
 			<li>Ranger Mitchel: Oh my god. Freeze boy.</li>
 			<li>Carl: Why? What is it Mr. Mitchel?</li>
 			<li>Ranger Mitchel: You see that? It's a moose egg. Not usualy for them to be left alone like that. Momma's gotta be nearby.</li>
-			<li>Narrator: A large, brown, and furry egg lay nestled in a bed of pine needles surrounded by trees in every direction. A trail of crimson stained staining the forest floor lay before them leading into the thickest brush of the woods.</li>
+			<li>Narrator: A large, brown, and furry egg lay nestled in a bed of pine needles surrounded by trees in every direction. A trail of crimson staining the forest floor lay before them leading into the thickest brush of the woods.</li>
 			<li>Carl: Wait... Mr. Mitchel. Is that blood?</li>
 		</ul><hr>
 		<h3>Tips</h3>
