--- a/pages/performance.html
+++ b/pages/performance.html
@@ -40,6 +40,9 @@
 				<a href="#dayInTheLife">Day in the Life</a>
 			</li>
 			<li>
+				<a href="#gossip">Gossip</a>
+			</li>
+			<li>
 				<a href="#pillars">Pillars</a>
 			</li>
 			<li>
@@ -308,6 +311,52 @@
 
 	<hr class="thick-hr">
 
+	<!-- ---------- GOSSIP ---------- -->
+	<div class="game-box p-2" id="gossip">
+		<h2>Gossip</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>Improvisers get a suggestion and one at a time deliver a pun or joke as if it were gossip about one of the other improvisers in the circle.</li>
+			<li>This pun game is a little more conversational. Improvisers deliver their puns to each other instead of directly to the audience.</li>
+			<li>This pun game is also very character focused. Improvisers should put on their valley girl or stuck-up kind of gossipy character.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Suggestion: Car</li>
+			<ul>
+				<li>Example 1</li>
+				<ul>
+					<li>Brad: Hey tina, did you hear about Greg?</li>
+					<li>Tina: No Brad oh em jeee what about him?</li>
+					<li>Brad: I heard that he contracted Chev-VD</li>
+					<li>Tina: Oh no I hope it's not carmydia!</li>
+				</ul>
+				<li>Example 2</li>
+				<ul>
+					<li>Greg: Hey Brad can I talk to you please?</li>
+					<liBrad: Oh my gah Greg, yes what's wrong?li>
+					<li>Greg: I have to break up with Shirley.</li>
+					<li>Brad: Oh no, how come?</li>
+					<li>Greg: Last night she got drunk off en-gin & tonics and kissed my dad!</li>
+					<li>Brad: Oh no gross! Kick her to the curb!</li>
+				</ul>
+			</ul>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Really play up and commit to your character choice.</li>
+			<li>Normally in pun games, one improviser steps up and delivers their pun then returns to the back line. For this one it's more conversations and it's okay for each bit to be almost a qucik little scene.</li>
+			<li>It's also okay to address multiple improvisers at once or to call someone in the group out(within the game).</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="character.html">Character</a> - <a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
 	<!-- ---------- PILLARS ---------- -->
 	<div class="game-box p-2" id="pillars">
 		<h2>Pillars</h2>
@@ -469,7 +518,7 @@
 			<li>Ranger Mitchel: Oh my god. Freeze boy.</li>
 			<li>Carl: Why? What is it Mr. Mitchel?</li>
 			<li>Ranger Mitchel: You see that? It's a moose egg. Not usualy for them to be left alone like that. Momma's gotta be nearby.</li>
-			<li>Narrator: A large, brown, and furry egg lay nestled in a bed of pine needles surrounded by trees in every direction. A trail of crimson stained staining the forest floor lay before them leading into the thickest brush of the woods.</li>
+			<li>Narrator: A large, brown, and furry egg lay nestled in a bed of pine needles surrounded by trees in every direction. A trail of crimson staining the forest floor lay before them leading into the thickest brush of the woods.</li>
 			<li>Carl: Wait... Mr. Mitchel. Is that blood?</li>
 		</ul><hr>
 		<h3>Tips</h3>
