--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -64,6 +64,9 @@
     </div>
     <h3 id="g">G</h3>
     <div>
+      <ul>
+<li><h5><a href="pun.html#gossip">Gossip</a></h5></li>
+      </ul>
     </div>
     <h3 id="h">H</h3>
     <div>
