--- a/pages/categories.html
+++ b/pages/categories.html
@@ -20,30 +20,30 @@
     <h2>Categories</h2>
     <!-- <div class="ten-column-list"> -->
     <div class="category-links">
-      <a href="all_games.html">All Games</a>&emsp;&emsp;
-      <a href="audience_participation.html">Audience_Participation</a>&emsp;&emsp;
-      <a href="character.html">Character</a>&emsp;&emsp;
-      <a href="child_friendly.html">Child_Friendly</a>&emsp;&emsp;
-      <a href="energy.html">Energy</a>&emsp;&emsp;
-      <a href="exercises.html">Exercises</a>&emsp;&emsp;
-      <a href="gibberish.html">Gibberish</a>&emsp;&emsp;
-      <a href="group.html">Group_Games</a>&emsp;&emsp;
-      <a href="guessing.html">Guessing</a>&emsp;&emsp;
-      <a href="justification.html">Justification</a>&emsp;&emsp;
-      <a href="interview.html">Interview</a>&emsp;&emsp;
-      <a href="listening.html">Listening</a>&emsp;&emsp;
-      <a href="long_forms.html">Long_Forms</a>&emsp;&emsp;
-      <a href="musical.html">Musical</a>&emsp;&emsp;
-      <a href="narrative.html">Narrative</a>&emsp;&emsp;
-      <a href="object_work.html">Object_Work</a>&emsp;&emsp;
-      <a href="party.html">Party_Games</a>&emsp;&emsp;
-      <a href="performance.html">Performance</a>&emsp;&emsp;
-      <a href="pun.html">Pun</a>&emsp;&emsp;
-      <a href="scene.html">Scene_Work</a>&emsp;&emsp;
-      <a href="sentences.html">Sentence</a>&emsp;&emsp;
-      <a href="song_formats.html">Song_Formats</a>&emsp;&emsp;
-      <a href="torture.html">Torture</a>&emsp;&emsp;
-      <a href="warm_ups.html">Warm-Ups</a>
+      <a class="category-button" href="all_games.html">All Games</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="audience_participation.html">Audience Participation</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="character.html">Character</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="child_friendly.html">Child Friendly</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="energy.html">Energy</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="exercises.html">Exercises</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="gibberish.html">Gibberish</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="group.html">Group Games</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="guessing.html">Guessing</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="justification.html">Justification</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="interview.html">Interview</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="listening.html">Listening</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="long_forms.html">Long Forms</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="musical.html">Musical</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="narrative.html">Narrative</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="object_work.html">Object Work</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="party.html">Party Games</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="performance.html">Performance</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="pun.html">Pun</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="scene.html">Scene Work</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="sentences.html">Sentence</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="song_formats.html">Song Formats</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="torture.html">Torture</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="warm_ups.html">Warm-Ups</a> <!--&emsp;&emsp; -->
     </div>
     <!-- <table class="category-table">
       <tr>
